# CanvasEngine

./: .gitignore  CMakeLists.txt  README.md  canvas_cmake_options.h.in  cmake_configs.hpp.in
cmake/: compiler_options.cmake  configs.cmake  dependencies.cmake  doxygen.cmake  find_vulkan.cmake  find_wayland.cmake  find_x11.cmake  find_xlib.cmake  options.cmake  system.cmake  wayland_and_x11.cmake
cmake/dependencies/: CMakeLists.txt  find_vulkan.cmake  find_wayland.cmake  find_x11.cmake  find_xlib.cmake
cmake/doxygen/: CMakeLists.txt  error_codes_doxy.txt
dependencies/: CMakeLists.txt
docs/: error_codes.md  include_macros.md  index.md
examples/: CMakeLists.txt
examples/basic/: CMakeLists.txt
examples/basic/HelloWorld/: CMakeLists.txt  main.c
include/: canvas.h  canvas.hpp
include/canvas/: audio.h  audio.hpp  core.h  core.hpp  graphics.h  graphics.hpp  input.h  math.h  math.hpp  network.h  network.hpp  threads.h
include/canvas/audio/: audio.h  audio.hpp
include/canvas/core/: base.h  error.h  error.hpp  event.h  extern_config.hpp  extern_config.template.hpp  init.hpp  library.h  macros.hpp  memory.h  print.hpp  random.h  setup.h  signal.h  string.h  string.hpp  time.h  time.hpp  traits.hpp  utility.hpp  uuid.h  vector.hpp
include/canvas/core/details/: base.h.inl  base_def.inl  base_macros.inl  memory.h.inl  sysmacros.inl  time.h.inl
include/canvas/graphics/: device.h  driver.h  gpu_device.h  graphics.h  graphics.hpp  setup.h  vulkan.hpp
include/canvas/graphics/details/: graphics.inl
include/canvas/graphics/vulkan/: extensions.hpp  layers.hpp  vulkan.hpp
include/canvas/input/: input.h
include/canvas/math/: math.h  math.hpp  matrix.hpp  vec.h  vector.hpp
include/canvas/math/details/: vec.h.inl
include/canvas/network/: network.h  network.hpp
include/canvas/threads/: atomic.h  condition_variable.h  mutex.h  thread.h
include/canvas/threads/details/: atomic.h.inl  atomic_order.inl  check.inl  condition_variable.h.inl  mutex.h.inl  thread.h.inl
sources/: CMakeLists.txt  print.cpp
sources/audio/: CMakeLists.txt
sources/core/: CMakeLists.txt  configs.c  core.c  error.c  icore_ascii.h  icore_base.h  icore_global.h  icore_unix.c  icore_unix.h  icore_win32.c  icore_win32.h  init_and_shutdown.c  library.c  memory.c  random.c  setup.c  string.c  time.c
sources/graphics/: CMakeLists.txt  graphics.cpp  ifx_base.h  ifx_dx12.h  ifx_get_adapters.inl  ifx_vk.h  igraphics_base.h  setup.c
sources/graphics/directx12/: CMakeLists.txt  driver.c  idx12_protos.h  idx12_uuid.h  idx_enum_adapters.inl
sources/graphics/vulkan/: CMakeLists.txt  driver.c  icanvas_vulkan.hpp  ifx_vk.c  ivk_dev.c  ivk_dev.h  ivk_load.c  ivk_load.h  ivk_proto.c  ivk_proto.h  ivk_protos.c  ivk_protos.h  ivk_protos_funcs.inl  setup.c  vulkan.cpp
sources/graphics/vulkan/ivk_proto/: 1.0.inl  1.1.inl  1.2.inl  1.3.inl  1.4.inl  all.inl  ext.inl  global.inl
sources/math/: CMakeLists.txt
sources/network/: CMakeLists.txt
sources/threads/: CMakeLists.txt  condition_variable.c  mutex.c  threads.c
tests/: CMakeLists.txt  advance_init.c  array.c  basic_init.c  error.c  memory.c  tests.h
